[package]
name = "renum"
version = "0.1.1"
edition = "2021"
description = "From and TryFrom trait derive with customization"
authors = ["Russell Jancewicz <russell.jancewicz@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rjancewicz/renum"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0.71"

